chapter5/5-2-JWT/keycloak-gw-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-keycloak
      protocol: HTTP
    hosts:
    - "keycloak.istio.fun"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak
spec:
  hosts:
  - "keycloak.istio.fun"
  gateways:
  - keycloak-gateway
  http:
  - route:
    - destination:
        host: my-keycloak
        port:
          number: 80
---
